@@ -48,6 +48,7 @@ LanguageTool Change Log
      https://bugs.openjdk.java.net/browse/JDK-8008572
 
 -API:
+    -Removed several classes and methods that had been deprecated since version 2.6
     -The signature of Language.getRelevantRules() has changed.
     -WhitespaceRule has been renamed to MultipleWhitespaceRule (WhitespaceRule
      still exists but has been deprecated)
